# mini-jvm

./: .gitignore  .gitmodules  BoxTest.java  BubbleSortTest.java  CMakeLists.txt  CloneTest.java  FibonacciTest.java  GetClassTest.java  HelloWorld.java  InvokeDemo.java  MyObject.java  ObjectTest.java  README.md  StringTest.java  jvm_start.sh
src/: CMakeLists.txt  main.cpp
src/classfile/: AttributeInfo.cpp  AttributeInfo.h  CMakeLists.txt  ClassFile.cpp  ClassFile.h  ClassReader.cpp  ClassReader.h  ConstantInfo.cpp  ConstantInfo.h  ConstantPool.cpp  ConstantPool.h  MemberInfo.cpp  MemberInfo.h
src/classpath/: CMakeLists.txt  Classpath.cpp  Classpath.h  CompositeEntry.cpp  CompositeEntry.h  DirEntry.cpp  DirEntry.h  Entry.cpp  Entry.h  WildcardEntry.cpp  WildcardEntry.h  ZipEntry.cpp  ZipEntry.h
src/common/: type.h
src/instructions/: CMakeLists.txt  factory.cpp  factory.h
src/instructions/base/: BranchLogic.cpp  BranchLogic.h  BytecodeReader.h  Instruction.cpp  Instruction.h  class_init_logic.cpp  class_init_logic.h  method_invoke_logic.cpp  method_invoke_logic.h
src/instructions/comparisions/: dcmp.cpp  dcmp.h  fcmp.cpp  fcmp.h  if_acmp.cpp  if_acmp.h  if_icmp.cpp  if_icmp.h  ifcond.cpp  ifcond.h  lcmp.cpp  lcmp.h
src/instructions/constants/: const.cpp  const.h  ipush.cpp  ipush.h  ldc.cpp  ldc.h  nop.h
src/instructions/control/: goto.cpp  goto.h  lookupswitch.cpp  lookupswitch.h  return.cpp  return.h  tableswitch.cpp  tableswitch.h
src/instructions/extended/: goto_w.cpp  goto_w.h  ifnull.cpp  ifnull.h  wide.cpp  wide.h
src/interpreter/: CMakeLists.txt  interpreter.cpp  interpreter.h
src/log/: CMakeLists.txt  log.h
src/native/: CMakeLists.txt  registry.cpp  registry.hpp
src/rtda/: CMakeLists.txt  Frame.cpp  Frame.h  LocalVars.cpp  LocalVars.h  Object.h  OperandStack.cpp  OperandStack.h  Slot.h  Stack.cpp  Stack.h  Thread.cpp  Thread.h
(+153 files in other folders)
